--- a/dTVTerminalApp/.gitignore
+++ b/dTVTerminalApp/.gitignore
@@ -1,9 +1,28 @@
 *.iml
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
 /build
 /captures
 .externalNativeBuild
+
+/.idea
+bin/
+gen/
+app/build/
+proguard/
+
+*.apk
+*.ap_
+*.dex
+*.class
+
+local.properties
+*.ipr
+*.iws
+.classpath
+.project
+
+.DS_Store
+.DS_Store?
+ehthumbs.db
+Thumbs.db
+.Trashes
