--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -15,39 +15,39 @@
 
         <!-- ====================================== Home グループ Begin ====================================== -->
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Home.HomeActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.home_temp.HomeActivity"
             android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Home.ClipListActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.home_temp.ClipListActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Home.RecommendActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.home_temp.RecommendActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Home.RecordedListActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.home_temp.RecordedListActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Home.RecordReservationListActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.home_temp.RecordReservationListActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Home.WatchingVideoListActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.home_temp.WatchingVideoListActivity"
             android:screenOrientation="portrait" />
         <!-- ======================================  Home グループ End ====================================== -->
 
 
         <!-- ===================================== Launch グループ Begin ===================================== -->
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Launch.DAccountReSettingActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.launch_temp.DAccountReSettingActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Launch.DAccountSettingActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.launch_temp.DAccountSettingActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Launch.DAccountSettingHelpActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.launch_temp.DAccountSettingHelpActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Launch.LaunchActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.launch_temp.LaunchActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -55,62 +55,62 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Launch.STBConnectActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.launch_temp.STBConnectActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Launch.STBParingInvitationActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.launch_temp.STBParingInvitationActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Launch.STBSelectActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.launch_temp.STBSelectActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Launch.TutorialActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.launch_temp.TutorialActivity"
             android:screenOrientation="portrait" />
         <!-- ======================================  Launch グループ End ====================================== -->
 
 
         <!-- ====================================== Other グループ Begin ====================================== -->
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Other.NewsActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.other_temp.NewsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Other.NewsDetailActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.other_temp.NewsDetailActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Other.RemoteControlActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.other_temp.RemoteControlActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Other.SettingActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.other_temp.SettingActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Other.SettingDetailActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.other_temp.SettingDetailActivity"
             android:screenOrientation="portrait" />
         <!-- ======================================  Other グループ End ====================================== -->
 
 
         <!-- ====================================== Player グループ Begin ====================================== -->
-        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.Player.ChannelDetailPlayerActivity" />
-        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.Player.RecordedVideoPlayerActivity" />
-        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.Player.TvPlayerActivity" />
-        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.Player.VideoPlayerActivity" />
+        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.player_temp.ChannelDetailPlayerActivity" />
+        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.player_temp.RecordedVideoPlayerActivity" />
+        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.player_temp.TvPlayerActivity" />
+        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.player_temp.VideoPlayerActivity" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Player.RecommendPlayerActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.player_temp.RecommendPlayerActivity"
             android:launchMode="singleTop" />
         <!-- ======================================  Player グループ End ====================================== -->
 
 
         <!-- ====================================== Ranking グループ Begin ====================================== -->
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Ranking.DailyTvRankingActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.ranking_temp.DailyTvRankingActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Ranking.RankingTopActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.ranking_temp.RankingTopActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Ranking.VideoRankingActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.ranking_temp.VideoRankingActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Ranking.WeeklyTvRankingActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.ranking_temp.WeeklyTvRankingActivity"
             android:screenOrientation="portrait" />
         <!-- ======================================  Ranking グループ End ====================================== -->
 
@@ -118,42 +118,42 @@
         <!-- ====================================== Search グループ Begin ====================================== -->
 
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Search.SearchTopActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.search_temp.SearchTopActivity"
             android:screenOrientation="portrait" />
         <!-- ======================================  Search グループ End ====================================== -->
 
 
         <!-- ====================================== TvProgram グループ Begin ====================================== -->
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.TvProgram.ChannelListActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.tvprogram_temp.ChannelListActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.TvProgram.MyChannelEditActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.tvprogram_temp.MyChannelEditActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.TvProgram.TvProgramListActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.tvprogram_temp.TvProgramListActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.TvProgram.WeekTvProgramListActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.tvprogram_temp.WeekTvProgramListActivity"
             android:screenOrientation="portrait" />
         <!-- ======================================  TvProgram グループ End ====================================== -->
 
 
         <!-- ====================================== Video グループ Begin ====================================== -->
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Video.VideoContentListActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.video_temp.VideoContentListActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Video.VideoSubGenreActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.video_temp.VideoSubGenreActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.nttdocomo.android.tvterminalapp.activity.Video.VideoTopActivity"
+            android:name="com.nttdocomo.android.tvterminalapp.activity.video_temp.VideoTopActivity"
             android:screenOrientation="portrait" />
         <!-- ======================================  Video グループ End ====================================== -->
 
-        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.Temp.DAccountAppliActivity" />
-        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.Temp.GoogleStoreActivity" />
-        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.Launch.DAccountRegConfirmationActivity"></activity>
+        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.temp_temp.DAccountAppliActivity" />
+        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.temp_temp.GoogleStoreActivity" />
+        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.launch_temp.DAccountRegConfirmationActivity"></activity>
     </application>
 
 </manifest>
