--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -6,12 +6,13 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="">
 
         <!-- ====================================== Home グループ Begin ====================================== -->
         <activity
@@ -153,7 +154,7 @@
 
         <activity android:name="com.nttdocomo.android.tvterminalapp.activity.temp.DAccountAppliActivity" />
         <activity android:name="com.nttdocomo.android.tvterminalapp.activity.temp.GoogleStoreActivity" />
-        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.launch.DAccountRegConfirmationActivity"></activity>
+        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.launch.DAccountRegConfirmationActivity"/>
     </application>
 
 </manifest>
