DREM-410 ([DREM-6]レンタル一覧) 実装（UI）
レンタル一覧のUI部分を実装(ダミーデータによる画面表示のみ)

Change-Id: I0c9f8f9546734fabc8b36e12cb00936d43422e4d

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:name="com.nttdocomo.android.tvterminalapp.activity.home.RecordReservationListActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name="com.nttdocomo.android.tvterminalapp.activity.home.RentalListActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name="com.nttdocomo.android.tvterminalapp.activity.home.WatchingVideoListActivity"
             android:screenOrientation="portrait" />
         <!-- ======================================  Home グループ End ====================================== -->
