[DREM-11]コンテンツ詳細画面(他サービス、画面表示) 実装(UI,DP,DM)
画面表示部分を実装

Change-Id: Ife936b609f180ad8d05ee41208f91cc48d0967e9

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -95,6 +95,7 @@
         <activity android:name="com.nttdocomo.android.tvterminalapp.activity.player.ChannelDetailPlayerActivity" />
         <activity android:name="com.nttdocomo.android.tvterminalapp.activity.player.RecordedVideoPlayerActivity" />
         <activity android:name="com.nttdocomo.android.tvterminalapp.activity.player.TvPlayerActivity" />
+        <activity android:name="com.nttdocomo.android.tvterminalapp.activity.player.DtvContentsDetailActivity" />
         <activity android:name="com.nttdocomo.android.tvterminalapp.activity.player.VideoPlayerActivity" />
         <activity
             android:name="com.nttdocomo.android.tvterminalapp.activity.player.RecommendPlayerActivity"
