追加した内容 ■C++ Dlan     ・Dlna.h     ・Dlna.cpp 	・Common.h 	・DlnaDevXmlParser.h 	・DlnaDevXmlParser.cpp 	・DlnaRecVideoXmlParser.h 	・DlnaRecVideoXmlParser.cpp 	・DlnaXmlParserBase.h 	・DlnaJniCast.cpp（更新） ■Java Dlan     ・DlnaInterface.java 	・DlnaDmsItem 	・DlnaDMSInfo 	・DlnaDevListListener 	・DlnaProvDevList 	・DlnaProvRecVideo 	・DlnaRecVideoInfo 	・DlnaRecVideoItem 	・DlnaRecVideoListener ■To do 	・xx.cppファイルにて、完了する方法を記載している（サンプルソース付け）     ・ Pairingチーム 	    DlnaDevXmlParser.cppクラスを完了 	・ コンテンツ一覧チーム 	    DlnaRecVideoXmlParser.cppクラスを完了
※上記の設計ドキュメントは作成するつもりです
※実機でコンパイル、実行済み

Change-Id: Ica8b1811567a1847c442046fb61c34cf9ec3afcc

--- a/dTVTerminalApp/app/CMakeLists.txt
+++ b/dTVTerminalApp/app/CMakeLists.txt
@@ -109,6 +109,9 @@ add_library(
      dtvtlib # dynamic lib name
      SHARED  # share
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaJniCast.cpp
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/Dlna.cpp
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaDevXmlParser.cpp
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaRecVideoXmlParser.cpp
      )
 
 # 目標ライブラリをリンク
