DREM-755  nativeコードのログ出力のマクロ化
native層で出力するログをマクロ化してフィルタできるようにする。

Change-Id: I40f2cd8e4586f8601f08de9e15cffc55d42ee81a

--- a/dTVTerminalApp/app/build.gradle
+++ b/dTVTerminalApp/app/build.gradle
@@ -25,10 +25,28 @@ android {
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            externalNativeBuild {
+                cmake {
+                    cppFlags.add("-DENABLE_LOG_DEBUG")
+                    cppFlags.add("-DENABLE_LOG_INFO")
+                    cppFlags.add("-DENABLE_LOG_ERROR")
+                    cFlags.add("-DENABLE_LOG_DEBUG")
+                    cFlags.add("-DENABLE_LOG_INFO")
+                    cFlags.add("-DENABLE_LOG_ERROR")
+                }
+            }
         }
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            externalNativeBuild {
+                cmake {
+                    cppFlags.add("-DENABLE_LOG_INFO")
+                    cppFlags.add("-DENABLE_LOG_ERROR")
+                    cFlags.add("-DENABLE_LOG_INFO")
+                    cFlags.add("-DENABLE_LOG_ERROR")
+                }
+            }
         }
     }
 
