--- a/dTVTerminalApp/app/build.gradle
+++ b/dTVTerminalApp/app/build.gradle
@@ -14,11 +14,11 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags ""
-                abiFilters "armeabi-v7a" //, "armeabi"
+                abiFilters  "armeabi" //, "armeabi-v7a"
             }
         }
         ndk {
-            abiFilters 'armeabi-v7a'
+            abiFilters 'armeabi' //'armeabi-v7a'
         }
     }
     buildTypes {
