--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="false"
@@ -102,6 +104,12 @@
         <activity
             android:name="com.nttdocomo.android.tvterminalapp.activity.player.RecommendPlayerActivity"
             android:launchMode="singleTop" />
+        <activity
+            android:name="com.digion.dixim.android.activation.ActivationActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="Activation"
+            android:theme="@style/DiximPlayerPanelTheme" >
+        </activity>
         <!-- ======================================  Player グループ End ====================================== -->
 
 
