■STB接続アイコンをリアルタイム更新する必要があるので、 	共通化して、アプリ全画面のSTB接続アイコン更新を実現した。     BaseActivity.java     icon files ■java dlnaクラス調整と強化 	Dlna.cpp 	DlnaXmlParserBase.h 	DlnaXmlParserBase.cpp(追加) ■dlna機能初期化 	LaunchActivity.java ■Channel listパーサーに関連（実装中）     DlnaBSDigitalXmllParser.cpp     DlnaBSDigitalXmllParser.h ※DMSサーバへ接続しにくいので、動作確認は一部完了しました。（DMSサーバはうまく仕事の時、動作確認する必要がある）
Change-Id: Ic125bf2a98c965e567aad18ae2b6e894352f92f1

--- a/dTVTerminalApp/app/CMakeLists.txt
+++ b/dTVTerminalApp/app/CMakeLists.txt
@@ -111,9 +111,11 @@ add_library(
      SHARED  # share
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaJniCast.cpp
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/Dlna.cpp
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaXmlParserBase.cpp
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaDevXmlParser.cpp
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaRecVideoXmlParser.cpp
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DmsInfo.c
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaBSDigitalXmlParser.cpp
      )
 
 # 目標ライブラリをリンク
