--- a/dTVTerminalApp/app/CMakeLists.txt
+++ b/dTVTerminalApp/app/CMakeLists.txt
@@ -118,6 +118,7 @@ add_library(
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaDevXmlParser.cpp
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaRecVideoXmlParser.cpp
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DmsInfo.c
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaBSDigitalXmlParser.cpp
      )
 
 # 目標ライブラリをリンク
