DREM-441（昨日プッシュできない部分） ■XML PARSERロジック実装     DlnaTerChXmlParser.h 	DlnaTerChXmlParser.cpp 	DlnaHikariChXmlParser.h 	DlnaHikariChXmlParser.cpp
	DlnaTerChListItem.java
	DlnaTerChListInfo.java
	DlnaTerChListListener.java

	DlnaHikariChListItem.java
	DlnaHikariChListItem.java
	DlnaHikariChListListener.java

	DlnaBsChListItem.java
	DlnaBsChListItem.java
	DlnaBsChListListener.java

	DlnaProvBsChList.java
	DlnaProvTerChList.java
	DlnaProvHikariChList.java

DREM-60
■Channel List UI実装
  ChannelListFragmentFactory.java（新規）
  ChannelListFragment.java
  ChannelListActivity.java
  ChannelListAdapter.java（新規）
DREM-441
■xml parser強化
  DlnaBSDigitalXmlParser.cpp
  DlnaRecVideoXmlParser.cpp
  DlnaTerChXmlParser.cpp
  DlnaHikariChXmlParser.cpp

Change-Id: Ie01d7d54239d256b8140b8f5f5fa49a274ae487c

--- a/dTVTerminalApp/app/CMakeLists.txt
+++ b/dTVTerminalApp/app/CMakeLists.txt
@@ -109,6 +109,9 @@ set_target_properties(libxml2
 add_library(
      dtvtlib # dynamic lib name
      SHARED  # share
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaBSDigitalXmlParser.cpp
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaTerChXmlParser.cpp
+     ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaHikariChXmlParser.cpp
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaJniCast.cpp
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/Dlna.cpp
      ${CMAKE_SOURCE_DIR}/src/main/cpp/src/DlnaXmlParserBase.cpp
