DREM-959 [実装]([DREM-14]dアカウント設定アプリ連携)実装・実装レビュー
dアカウント設定アプリとの連携を行う処理を追加しました。

・OTTの取得処理
・dアカウント状態変化通知用レシーバーの登録処理

Change-Id: I1590c3d8b707d7c0b366c1966ba4936a0e817c26

--- a/dTVTerminalApp/app/build.gradle
+++ b/dTVTerminalApp/app/build.gradle
@@ -52,6 +52,9 @@ android {
 
     sourceSets {
         main {
+            aidl.srcDirs = [
+                    'src/main/aidl'
+            ]
             res.srcDirs =
                     [
                             'src/main/res/layout/launch',
