DREM937[実装] ([DREM-51]設定TOP画面)実装
ダウンロード先設定機能の実装
外出先視聴時の画質設定機能の実装
SDカード存在判定処理の追加、およびSDカードが存在しない場合ダウンロード先設定項目が表示されないように修正

Change-Id: I77e15d3013f0394c33d48b15ca54c28e0374cb48

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -88,6 +88,12 @@
         <activity
             android:name=".activity.other.SettingDetailActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.other.SettingImageQualityActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.other.SettingDownloadPathActivity"
+            android:screenOrientation="portrait" />
         <!-- ======================================  Other グループ End ====================================== -->
 
 
@@ -162,7 +168,7 @@
         <activity android:name=".activity.temp.DAccountAppliActivity" />
         <activity android:name=".activity.temp.GoogleStoreActivity" />
         <activity android:name=".activity.launch.DAccountRegConfirmationActivity" />
-        <activity android:name=".activity.other.SettingDownloadLocation"></activity>
+
     </application>
 
 </manifest>
