--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="false"
@@ -112,7 +114,7 @@
             android:name="com.digion.dixim.android.activation.ActivationActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="Activation"
-            android:theme="@style/DiximPlayerPanelTheme"></activity>
+            android:theme="@style/DiximPlayerPanelTheme" />
         <!-- ======================================  Player グループ End ====================================== -->
 
 
