--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -191,7 +191,7 @@
                 <action android:name="com.nttdocomo.android.idmanager.action.DOCOMOID_LINKED_LINE" />
             </intent-filter>
         </receiver>
-
+        <service android:name=".service.download.DownloadService"/>
     </application>
 
 </manifest>
